deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-game-2048
  labels:
    app: eks-sample-linux-app
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - name: app-2048
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: Always
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
