service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: service-game-2048
spec:
  selector:
    app.kubernetes.io/name: app-2048
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
